--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: psmisc 23.2\n"
 "Report-Msgid-Bugs-To: csmall@enc.com.au\n"
-"POT-Creation-Date: 2018-08-13 21:33+1000\n"
+"POT-Creation-Date: 2018-09-24 20:02+1000\n"
 "PO-Revision-Date: 2018-08-13 22:04+0200\n"
 "Last-Translator: Roland Illig <roland.illig@gmx.de>\n"
 "Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
@@ -50,17 +50,22 @@ msgstr ""
 "              [-k [-i] [-SIGNAL]] NAME...\n"
 "        fuser -l\n"
 "        fuser -V\n"
-"Anzeigen, welche Prozesse die angegebenen Dateien, Sockets oder Dateisysteme benutzen.\n"
+"Anzeigen, welche Prozesse die angegebenen Dateien, Sockets oder Dateisysteme "
+"benutzen.\n"
 "\n"
 "  -a,--all             auch ungenutzte Dateien anzeigen\n"
 "  -i,--interactive     vor dem Abschießen nachfragen (ohne -k wirkungslos)\n"
 "  -I,--inode           immer Inodes benutzen, um Dateien zu vergleichen\n"
-"  -k,--kill            Prozesse abschießen, die auf die angegebene Datei zugreifen\n"
+"  -k,--kill            Prozesse abschießen, die auf die angegebene Datei "
+"zugreifen\n"
 "  -l,--list-signals    Signalnamen auflisten\n"
-"  -m,--mount           alle Prozesse anzeigen, die auf die angegebenen Dateisysteme\n"
+"  -m,--mount           alle Prozesse anzeigen, die auf die angegebenen "
+"Dateisysteme\n"
 "                       oder Blockgeräte zugreifen\n"
-"  -M,--ismountpoint    Operation nur durchführen, wenn NAME ein Einhängepunkt ist\n"
-"  -n,--namespace RAUM  in angegebenem Namensraum suchen (file, udp oder tcp)\n"
+"  -M,--ismountpoint    Operation nur durchführen, wenn NAME ein "
+"Einhängepunkt ist\n"
+"  -n,--namespace RAUM  in angegebenem Namensraum suchen (file, udp oder "
+"tcp)\n"
 "  -s,--silent          stille Durchführung\n"
 "  -SIGNAL              SIGNAL anstatt SIGKILL senden\n"
 "  -u,--user            Benutzer-IDs anzeigen\n"
@@ -185,7 +190,9 @@ msgstr "Die Option »all« kann nicht mit der Option »silent« kombiniert werde
 
 #: src/fuser.c:1312
 msgid "You cannot search for only IPv4 and only IPv6 sockets at the same time"
-msgstr "Es ist nicht möglich, gleichzeitig ausschließlich nach IPv4 und ausschließlich nach IPv6-Sockets zu suchen."
+msgstr ""
+"Es ist nicht möglich, gleichzeitig ausschließlich nach IPv4 und "
+"ausschließlich nach IPv6-Sockets zu suchen."
 
 #: src/fuser.c:1401
 #, c-format
@@ -264,7 +271,8 @@ msgstr "%s: Kein Prozess gefunden\n"
 #: src/killall.c:742
 #, c-format
 msgid ""
-"Usage: killall [ -Z CONTEXT ] [ -u USER ] [ -y TIME ] [ -o TIME ] [ -eIgiqrvw ]\n"
+"Usage: killall [ -Z CONTEXT ] [ -u USER ] [ -y TIME ] [ -o TIME ] [ -"
+"eIgiqrvw ]\n"
 "               [ -s SIGNAL | -SIGNAL ] NAME...\n"
 msgstr ""
 "Aufruf: killall [-Z CONTEXT] [-u USER] [-y TIME] [-o TIME] [-eIgiqrvw]\n"
@@ -302,7 +310,8 @@ msgstr ""
 "       killall -V, --version\n"
 "\n"
 "  -e,--exact          genaue Übereinstimmung für sehr lange Namen verlangen\n"
-"  -I,--ignore-case    nicht zwischen Groß- und Kleinschreibung unterscheiden\n"
+"  -I,--ignore-case    nicht zwischen Groß- und Kleinschreibung "
+"unterscheiden\n"
 "  -g,--process-group  Prozessgruppe statt Einzelprozess abbrechen\n"
 "  -y,--younger-than   Prozesse jünger als ZEIT abbrechen\n"
 "  -o,--older-than     Prozesse älter als ZEIT abbrechen\n"
@@ -312,7 +321,8 @@ msgstr ""
 "  -r,--regexp         NAME ist ein erweiteter regulärer Ausdruck\n"
 "  -s,--signal SIGNAL  benutzerdefiniertes Signal anstatt SIGTERM senden\n"
 "  -u,--user USER      nur Prozesse von angegebenem Benutzer abbrechen\n"
-"  -v,--verbose        benachrichtigen, falls das Signal erfolgreich gesendet\n"
+"  -v,--verbose        benachrichtigen, falls das Signal erfolgreich "
+"gesendet\n"
 "                      wurde\n"
 "  -V,--version        Version anzeigen\n"
 "  -w,--wait           auf das Beenden der Prozesse warten\n"
@@ -337,24 +347,26 @@ msgstr "Ungültiges Zeitformat"
 msgid "Cannot find user %s\n"
 msgstr "Benutzer %s kann nicht gefunden werden\n"
 
-#: src/killall.c:931
+#: src/killall.c:936
 msgid "Invalid namespace PID"
 msgstr "Ungültige Namensraum-PID"
 
-#: src/killall.c:938
+#: src/killall.c:945
 #, c-format
 msgid "Bad regular expression: %s\n"
 msgstr "Ungültiger regulärer Ausdruck: %s\n"
 
-#: src/killall.c:973
+#: src/killall.c:986
 #, c-format
 msgid "killall: Maximum number of names is %d\n"
 msgstr "killall: Die maximale Anzahl von Namen ist %d\n"
 
-#: src/killall.c:978
+#: src/killall.c:991
 #, c-format
 msgid "killall: %s lacks process entries (not mounted ?)\n"
-msgstr "killall: Bei %s fehlen die Prozesseinträge (Dateisystem möglicherweise nicht eingehängt?)\n"
+msgstr ""
+"killall: Bei %s fehlen die Prozesseinträge (Dateisystem möglicherweise nicht "
+"eingehängt?)\n"
 
 #: src/peekfd.c:112
 #, c-format
@@ -382,8 +394,10 @@ msgid ""
 "    -8, --eight-bit-clean        output 8 bit clean streams.\n"
 "    -n, --no-headers             don't display read/write from fd headers.\n"
 "    -c, --follow                 peek at any new child processes too.\n"
-"    -t, --tgid                   peek at all threads where tgid equals <pid>.\n"
-"    -d, --duplicates-removed     remove duplicate read/writes from the output.\n"
+"    -t, --tgid                   peek at all threads where tgid equals "
+"<pid>.\n"
+"    -d, --duplicates-removed     remove duplicate read/writes from the "
+"output.\n"
 "    -V, --version                prints version info.\n"
 "    -h, --help                   prints this help.\n"
 "\n"
@@ -393,8 +407,10 @@ msgstr ""
 "    -8, --eight-bit-clean      8-Bit-Ausgabe erzwingen.\n"
 "    -n, --no-headers           Header für Lesen/Schreiben aus FDs nicht\n"
 "                               anzeigen.\n"
-"    -c, --follow               Auch nach neuen Kindprozessen Ausschau halten.\n"
-"    -t, --tgid                 Nach allen Threads Ausschau halten, deren tgid\n"
+"    -c, --follow               Auch nach neuen Kindprozessen Ausschau "
+"halten.\n"
+"    -t, --tgid                 Nach allen Threads Ausschau halten, deren "
+"tgid\n"
 "                               gleich <PID> ist.\n"
 "    -d, --duplicates-removed   Doppeltes Lesen/Schreiben nicht ausgeben.\n"
 "    -V, --version              Versionsinformationen ausgeben.\n"
@@ -651,7 +667,8 @@ msgid ""
 "\n"
 msgstr ""
 "    PID       mit dieser PID starten; Vorgabewert ist 1 (init)\n"
-"    BENUTZER  zeige nur Prozessbäume, deren Wurzeln Prozesse dieses Benutzers sind\n"
+"    BENUTZER  zeige nur Prozessbäume, deren Wurzeln Prozesse dieses "
+"Benutzers sind\n"
 "\n"
 
 #: src/pstree.c:1131
@@ -742,7 +759,9 @@ msgstr "%s: unbekanntes Signal; %s -l listet die Signale auf.\n"
 #~ "\n"
 
 #~ msgid "You cannot use the mounted and mountpoint flags together"
-#~ msgstr "Die Flags gemounted und mount-Punkt können nicht gleichzeitig verwendet werden."
+#~ msgstr ""
+#~ "Die Flags gemounted und mount-Punkt können nicht gleichzeitig verwendet "
+#~ "werden."
 
 #~ msgid "Cannot stat mount point %s: %s\n"
 #~ msgstr "Kann Status von Einhängepunkt \"%s\" nicht ermitteln: %s\n"
