--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: psmisc 23.2\n"
 "Report-Msgid-Bugs-To: csmall@enc.com.au\n"
-"POT-Creation-Date: 2018-08-13 21:33+1000\n"
+"POT-Creation-Date: 2018-09-24 20:02+1000\n"
 "PO-Revision-Date: 2018-08-13 13:31-0200\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
-"Language-Team: Brazilian Portuguese <ldpbr-translation@lists.sourceforge.net>\n"
+"Language-Team: Brazilian Portuguese <ldpbr-translation@lists.sourceforge."
+"net>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,7 +49,8 @@ msgstr ""
 "             [-k [-i] [-SINAL]] NOME...\n"
 "       fuser -l\n"
 "       fuser -V\n"
-"Mostra quais processos usam os arquivos, sockets ou sistema de arquivos especificados.\n"
+"Mostra quais processos usam os arquivos, sockets ou sistema de arquivos "
+"especificados.\n"
 "\n"
 "  -a,--all              exibe também arquivos sem uso\n"
 "  -i,--interactive      pergunta antes de matar (ignorado sem -k)\n"
@@ -262,7 +264,8 @@ msgstr "%s: nenhum processo localizado\n"
 #: src/killall.c:742
 #, c-format
 msgid ""
-"Usage: killall [ -Z CONTEXT ] [ -u USER ] [ -y TIME ] [ -o TIME ] [ -eIgiqrvw ]\n"
+"Usage: killall [ -Z CONTEXT ] [ -u USER ] [ -y TIME ] [ -o TIME ] [ -"
+"eIgiqrvw ]\n"
 "               [ -s SIGNAL | -SIGNAL ] NAME...\n"
 msgstr ""
 "Uso:   killall [ -Z CONTEXTO ] [ -u USUÁRIO ] [ -y TEMPO ] [ -o TEMPO ]\n"
@@ -334,21 +337,21 @@ msgstr "Formato de tempo inválido"
 msgid "Cannot find user %s\n"
 msgstr "Não foi possível localizar o usuário %s\n"
 
-#: src/killall.c:931
+#: src/killall.c:936
 msgid "Invalid namespace PID"
 msgstr "PID de espaço de nome inválido"
 
-#: src/killall.c:938
+#: src/killall.c:945
 #, c-format
 msgid "Bad regular expression: %s\n"
 msgstr "Expressão regular inválida: %s\n"
 
-#: src/killall.c:973
+#: src/killall.c:986
 #, c-format
 msgid "killall: Maximum number of names is %d\n"
 msgstr "killall: O número máximo de nomes é %d\n"
 
-#: src/killall.c:978
+#: src/killall.c:991
 #, c-format
 msgid "killall: %s lacks process entries (not mounted ?)\n"
 msgstr "killall: %s não possui entradas de processos (não montado?)\n"
@@ -379,8 +382,10 @@ msgid ""
 "    -8, --eight-bit-clean        output 8 bit clean streams.\n"
 "    -n, --no-headers             don't display read/write from fd headers.\n"
 "    -c, --follow                 peek at any new child processes too.\n"
-"    -t, --tgid                   peek at all threads where tgid equals <pid>.\n"
-"    -d, --duplicates-removed     remove duplicate read/writes from the output.\n"
+"    -t, --tgid                   peek at all threads where tgid equals "
+"<pid>.\n"
+"    -d, --duplicates-removed     remove duplicate read/writes from the "
+"output.\n"
 "    -V, --version                prints version info.\n"
 "    -h, --help                   prints this help.\n"
 "\n"
@@ -388,10 +393,12 @@ msgid ""
 msgstr ""
 "Uso: peekfd [-8] [-n] [-c] [-d] [-V] [-h] <pid> [<fd> ..]\n"
 "    -8, --eight-bit-clean        saída limpa com fluxos de 8 bits.\n"
-"    -n, --no-headers             não exibe leitura/gravação dos cabeçalhos fd.\n"
+"    -n, --no-headers             não exibe leitura/gravação dos cabeçalhos "
+"fd.\n"
 "    -c, --follow                 espia qualquer novo processo filho também.\n"
 "    -t, --tgid                   espia threads em que tgid é igual a <pid>.\n"
-"    -d, --duplicates-removed     remove leitura/gravação duplicados da saída.\n"
+"    -d, --duplicates-removed     remove leitura/gravação duplicados da "
+"saída.\n"
 "    -V, --version                exibe informações de versão.\n"
 "    -h, --help                   exibe esta ajuda.\n"
 "\n"
