--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: psmisc 23.2\n"
 "Report-Msgid-Bugs-To: csmall@enc.com.au\n"
-"POT-Creation-Date: 2018-08-13 21:33+1000\n"
+"POT-Creation-Date: 2018-09-24 20:02+1000\n"
 "PO-Revision-Date: 2018-08-25 08:01+0300\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <gnu@d07.ru>\n"
@@ -19,7 +19,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 "X-Generator: Lokalize 2.0\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: src/fuser.c:137
 #, c-format
@@ -63,7 +64,8 @@ msgstr ""
 "  -M,--ismountpoint    выполнять запрос, только если ИМЯ является точкой\n"
 "                       монтирования\n"
 "    -n,--namespace ОБЛАСТЬ\n"
-"                     искать в указанном пространстве имён (file, udp или tcp)\n"
+"                     искать в указанном пространстве имён (file, udp или "
+"tcp)\n"
 "    -s,--silent        не выводить сообщения\n"
 "    -СИГНАЛ            посылать указанный сигнал вместо SIGKILL\n"
 "    -u,--user          показывать идентификатор пользователя (uid)\n"
@@ -184,7 +186,9 @@ msgstr "Не указан процесс"
 
 #: src/fuser.c:1307
 msgid "all option cannot be used with silent option."
-msgstr "Параметр показа всех файлов нельзя использовать вместе с параметром отключения сообщений."
+msgstr ""
+"Параметр показа всех файлов нельзя использовать вместе с параметром "
+"отключения сообщений."
 
 #: src/fuser.c:1312
 msgid "You cannot search for only IPv4 and only IPv6 sockets at the same time"
@@ -267,7 +271,8 @@ msgstr "%s: процесс не найден\n"
 #: src/killall.c:742
 #, c-format
 msgid ""
-"Usage: killall [ -Z CONTEXT ] [ -u USER ] [ -y TIME ] [ -o TIME ] [ -eIgiqrvw ]\n"
+"Usage: killall [ -Z CONTEXT ] [ -u USER ] [ -y TIME ] [ -o TIME ] [ -"
+"eIgiqrvw ]\n"
 "               [ -s SIGNAL | -SIGNAL ] NAME...\n"
 msgstr ""
 "Использование: killall [-Z КОНТЕКСТ] [-u ПОЛЬЗОВАТЕЛЬ] [ -o ВРЕМЯ ]\n"
@@ -309,16 +314,20 @@ msgstr ""
 "  -g,--process-group   завершать группу процесса вместо одного процесса\n"
 "  -y,--younger-than    завершить процессы, новее чем заданного ВРЕМЕНИ\n"
 "  -o,--older-than      завершить процессы, старее чем заданного ВРЕМЕНИ\n"
-"  -i,--interactive     запрашивать подтверждение перед завершением процессов\n"
+"  -i,--interactive     запрашивать подтверждение перед завершением "
+"процессов\n"
 "  -l,--list            вывести список допустимых имён сигналов\n"
 "  -q,--quiet           не показывать подробные сообщения\n"
-"  -r,--regexp          рассматривать ИМЯ как расширенное регулярное выражение\n"
+"  -r,--regexp          рассматривать ИМЯ как расширенное регулярное "
+"выражение\n"
 "  -s,--signal СИГНАЛ   посылать указанный СИГНАЛ, а не SIGTERM\n"
-"  -u,--user ПОЛЬЗВ      завершить процесс(ы), запущенный только ПОЛЬЗОВАТЕЛЕМ\n"
+"  -u,--user ПОЛЬЗВ      завершить процесс(ы), запущенный только "
+"ПОЛЬЗОВАТЕЛЕМ\n"
 "  -v,--verbose         уведомлять только при успешной отправке сигнала\n"
 "  -V,--version         показать информацию о версии\n"
 "  -w,--wait            ожидать завершения процессов\n"
-"  -n,--ns PID          все процессы, принадлежащие тем же пространствам имён\n"
+"  -n,--ns PID          все процессы, принадлежащие тем же пространствам "
+"имён\n"
 "                       что и PID\n"
 
 #: src/killall.c:770
@@ -340,21 +349,21 @@ msgstr "неправильный формат времени"
 msgid "Cannot find user %s\n"
 msgstr "Пользователь %s не найден\n"
 
-#: src/killall.c:931
+#: src/killall.c:936
 msgid "Invalid namespace PID"
 msgstr "Неверный PID пространства имён"
 
-#: src/killall.c:938
+#: src/killall.c:945
 #, c-format
 msgid "Bad regular expression: %s\n"
 msgstr "Неправильное регулярное выражение: %s\n"
 
-#: src/killall.c:973
+#: src/killall.c:986
 #, c-format
 msgid "killall: Maximum number of names is %d\n"
 msgstr "killall: количество имён не может превышать %d\n"
 
-#: src/killall.c:978
+#: src/killall.c:991
 #, c-format
 msgid "killall: %s lacks process entries (not mounted ?)\n"
 msgstr "killall: в %s нет записей о процессах (не смонтирован?)\n"
@@ -385,8 +394,10 @@ msgid ""
 "    -8, --eight-bit-clean        output 8 bit clean streams.\n"
 "    -n, --no-headers             don't display read/write from fd headers.\n"
 "    -c, --follow                 peek at any new child processes too.\n"
-"    -t, --tgid                   peek at all threads where tgid equals <pid>.\n"
-"    -d, --duplicates-removed     remove duplicate read/writes from the output.\n"
+"    -t, --tgid                   peek at all threads where tgid equals "
+"<pid>.\n"
+"    -d, --duplicates-removed     remove duplicate read/writes from the "
+"output.\n"
 "    -V, --version                prints version info.\n"
 "    -h, --help                   prints this help.\n"
 "\n"
@@ -506,7 +517,8 @@ msgid ""
 "  Child processes (user system guest):       %6.2f %6.2f %6.2f\n"
 msgstr ""
 "Процессорное время\n"
-"  Этот процесс      (польз. систем. гостевое blkio): %6.2f %6.2f %6.2f %6.2f\n"
+"  Этот процесс      (польз. систем. гостевое blkio): %6.2f %6.2f %6.2f "
+"%6.2f\n"
 "  Дочерние процессы (польз. систем. гостевое):       %6.2f %6.2f %6.2f\n"
 
 #: src/prtstat.c:189
@@ -624,19 +636,22 @@ msgstr ""
 "  --highlight-pid=PID выделить цветом процесс PID и его предков\n"
 "  -g, --show-pgids    показывать идентификаторы групп процесса;\n"
 "                      включает -c\n"
-"  -G, --vt100         использовать символы терминала VT100 для рисования линий\n"
+"  -G, --vt100         использовать символы терминала VT100 для рисования "
+"линий\n"
 "  -l, --long          не обрезать длинные строки\n"
 "  -n, --numeric-sort  сортировать вывод по PID\n"
 "  -N тип,\n"
 "  --ns-sort=тип       сортировать по типу пространства имён\n"
 "                      (cgroup, ipc, mnt, net, pid, user, uts)\n"
-"  -p, --show-pids     показывать идентификаторы процессов (PID); включает -c\n"
+"  -p, --show-pids     показывать идентификаторы процессов (PID); включает -"
+"c\n"
 "  -s, --show-parents  показывать родителей выбранного процесса\n"
 "  -S, --ns-changes    показывать переходы пространств имён\n"
 "  -t, --thread-names  показывать полные имена нитей\n"
 "  -T, --hide-threads  скрывать нити, показывать только процессы\n"
 "  -u, --uid-changes   показывать переходы идентификаторов пользователей\n"
-"  -U, --unicode       использовать символы UTF-8 (Юникод) для рисования линий\n"
+"  -U, --unicode       использовать символы UTF-8 (Юникод) для рисования "
+"линий\n"
 "  -V, --version       показать информацию о версии\n"
 
 #: src/pstree.c:1121
@@ -656,7 +671,8 @@ msgid ""
 "\n"
 msgstr ""
 "  PID                 начинать от указанного PID; по умолчанию 1 (init)\n"
-"  ПОЛЬЗОВАТЕЛЬ        показать только дерево процессов указанного пользователя\n"
+"  ПОЛЬЗОВАТЕЛЬ        показать только дерево процессов указанного "
+"пользователя\n"
 "\n"
 
 #: src/pstree.c:1131
@@ -735,7 +751,8 @@ msgstr "%s: неизвестный сигнал; %s -l выводит списо
 #~ "\n"
 #~ "   -e          требовать полного совпадения для очень длинных имён;\n"
 #~ "               игнорировать, если командная строка недоступна\n"
-#~ "   -g          показывать идентификатор группы вместо идентификатора процесса\n"
+#~ "   -g          показывать идентификатор группы вместо идентификатора "
+#~ "процесса\n"
 #~ "   -V          показать информацию о версии\n"
 #~ "\n"
 
